syntax = "proto3";
package stwartchain.stats;

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/stats/types";

message UserStats {
  uint64 countUniqueActiveUsers = 1; 
  uint64 countNewUsers = 2; 
}
